# taskit

./: .capsec-baseline.json  .capsec.toml  .gitignore  .health-baseline.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cruxfile  DESIGN.md  HANDOFF.local.md  LICENSE-APACHE  README.md  ci.crux  cliff.toml  deny.toml  mise.toml  taskit.toml
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: changelog.md  release-check.md  release-init.md  release-plan.md  release.md  version-bump.md
.claude/commands/templates/: add-subcommand.md  cargo-gate.md  explore-crate.md
.config/: rail.toml
.ctx/: HANDOFF.taskit.taskit.yaml  HANDOFF.tools.yaml  HANDOFF.xtask.xtask.yaml  rustqual-baseline.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  refactor.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  release.yml
.taskit-cache/: compile-cache.json  master-hash  pre-commit.json  pre-push.json
baml_src/: clients.baml  conflict_resolver.baml  generators.baml
crates/taskit-core/: CHANGELOG.md  Cargo.toml
crates/taskit-core/examples/: custom_runner.rs
crates/taskit-core/src/: config.rs  conflict_resolver.rs  conformance.rs  lib.rs  output_format.rs  output_formatter.rs  pipeline_runner.rs  step.rs  step_builder.rs
crates/taskit-crux/: CHANGELOG.md  Cargo.toml
crates/taskit-crux/src/: lib.rs
crates/taskit-engine/: CHANGELOG.md  Cargo.toml
crates/taskit-engine/examples/: pipeline_builder.rs
crates/taskit-engine/src/: affected.rs  audit.rs  check_deps.rs  check_freshness.rs  ci.rs  clean.rs  command.rs  config.rs  ctx.rs  dev_setup.rs  discovery.rs  flow.rs  flow_state_store.rs  fmt.rs  health.rs  hooks.rs  inspect.rs  install.rs  lib.rs  lint.rs  output.rs  patch.rs  pipeline_runner.rs  progress.rs  publish.rs  quick.rs  runner.rs  step.rs  update.rs  update_claude.rs  util.rs  version.rs
crates/taskit-engine/src/cache/: mod.rs
crates/taskit-engine/src/protocol/: contract_hash.rs  drift.rs  sites.rs
crates/taskit-engine/src/release/: gh.rs
crates/taskit-engine/src/testing/: bench.rs  compile.rs  coverage.rs  fuzz.rs  mod.rs  proptest.rs  report.rs  run.rs  self_test.rs  snapshot.rs
crates/taskit-engine/tests/: flow_integration.rs
crates/taskit-init/: CHANGELOG.md  Cargo.toml
crates/taskit-init/examples/: discover_plan.rs
crates/taskit-init/src/: escape.rs  lib.rs  plan.rs  render_cruxfile.rs  render_toml.rs  scaffold.rs
crates/taskit-init/tests/: init_integration.rs
crates/taskit-macros/: Cargo.toml
crates/taskit-macros/src/: config_defaults.rs  lib.rs  taskit_test.rs
crates/taskit-macros/tests/: bare_taskit_test.rs  config_defaults.rs  taskit_test_offline.rs  taskit_test_tempdir.rs
crates/taskit-output/: Cargo.toml
crates/taskit-output/examples/: format_outcome.rs
crates/taskit-output/src/: formatter.rs  lib.rs  macros.rs  message.rs  sink.rs  thread_sink.rs
crates/taskit-output/src/sinks/: buffer.rs  mod.rs  stderr.rs  tee.rs
crates/taskit-testing/: Cargo.toml
crates/taskit-testing/src/: helpers.rs  lib.rs  macros.rs  temp_dir.rs
crates/taskit-types/: CHANGELOG.md  Cargo.toml
crates/taskit-types/examples/: build_outcome.rs
crates/taskit-types/src/: config.rs  conflict.rs  error.rs  flow_state.rs  lib.rs  output_format.rs  step.rs
crates/taskit-types/tests/: config_fixtures.rs
crates/taskit-types/tests/fixtures/: full-taskit.toml
docs/: book.toml
docs/designs/: 2026-06-27-autodiscovery-structured-output-design.md  2026-06-27-init-pipeline-runner-design.md  2026-06-28-macros-crate-design.md  2026-06-28-remove-xtask-design.md  2026-06-28-taskit-flow-design.md  2026-06-28-taskit-types-miette-errors-design.md  2026-07-08-pipeline-diagnostics-mode-design.md  2026-07-10-flow-output-config-design.md
docs/plans/: 2026-06-27-autodiscovery-v0.2.md  2026-06-27-init-pipeline-runner-v0.4.md  2026-06-27-structured-output-v0.3.md
docs/src/: README.md  SUMMARY.md
docs/src/architecture/: overview.md
docs/src/crates/: taskit-core.md  taskit-crux.md  taskit-engine.md  taskit-init.md  taskit-macros.md  taskit-output.md  taskit-testing.md  taskit-types.md  taskit.md
docs/src/reference/: ci-pipeline.md  configuration.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_lockfile_parse/: seed1
fuzz/corpus/fuzz_parse_config/: seed1
fuzz/corpus/fuzz_render_toml/: minimal.toml
fuzz/fuzz_targets/: fuzz_lockfile_parse.rs  fuzz_parse_config.rs  fuzz_render_toml.rs
src/: affected.rs  check_freshness.rs  ci.rs  config.rs  discovery.rs  flow_resolver.rs  hooks.rs  lib.rs  main.rs  output.rs  progress.rs  quick.rs  step.rs  update_claude.rs  version.rs
src/baml_client/: baml_source_map.rs
src/baml_client/functions/: async_client.rs  sync_client.rs
src/baml_client/stream_types/: classes.rs  mod.rs
src/baml_client/type_builder/: classes.rs  mod.rs
src/baml_client/types/: classes.rs  mod.rs
src/protocol/: drift.rs  mod.rs
src/testing/: bench.rs  compile.rs  coverage.rs  proptest.rs  report.rs  run.rs
xtask/src/: book.rs  ci.rs  fmt.rs  lint.rs  main.rs  pre_commit.rs  pre_push.rs  test.rs
