[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/89jobrien/taskit"

[package]
name = "taskit"
version = "0.4.0"
edition = "2024"
description = "Config-driven cargo xtask runner with affected-crate detection, protocol-drift tracking, and CI pipeline orchestration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/89jobrien/taskit"
homepage = "https://github.com/89jobrien/taskit"
keywords = ["cargo", "xtask", "ci", "workspace", "build-tool"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
publish = true

[[bin]]
name = "taskit"
path = "src/main.rs"

[dependencies]
taskit-core = { path = "crates/taskit-core" }
taskit-engine = { path = "crates/taskit-engine" }
taskit-init = { path = "crates/taskit-init" }
taskit-crux = { path = "crates/taskit-crux", optional = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
xshell = "0.2"

[features]
crux = ["dep:taskit-crux"]
