[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/89jobrien/taskit"

[workspace.dependencies]
taskit-core = { version = "0.6.0", path = "crates/taskit-core" }
taskit-engine = { version = "0.6.0", path = "crates/taskit-engine" }
taskit-init = { version = "0.6.0", path = "crates/taskit-init" }
taskit-crux = { version = "0.6.0", path = "crates/taskit-crux" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
xshell = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cargo_metadata = "0.19"

[package]
name = "taskit"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config-driven cargo xtask runner with affected-crate detection, protocol-drift tracking, and CI pipeline orchestration"
homepage = "https://github.com/89jobrien/taskit"
keywords = ["cargo", "xtask", "ci", "workspace", "build-tool"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
publish = true

[[bin]]
name = "taskit"
path = "src/main.rs"

[dependencies]
taskit-core.workspace = true
taskit-engine.workspace = true
taskit-init.workspace = true
taskit-crux = { workspace = true, optional = true }
anyhow.workspace = true
clap.workspace = true
xshell.workspace = true

[features]
crux = ["dep:taskit-crux"]
