[package]
name = "taskit-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_parse_config"
path = "fuzz_targets/fuzz_parse_config.rs"
doc = false

[[bin]]
name = "fuzz_lockfile_parse"
path = "fuzz_targets/fuzz_lockfile_parse.rs"
doc = false

[[bin]]
name = "fuzz_render_toml"
path = "fuzz_targets/fuzz_render_toml.rs"
doc = false

[dependencies]
libfuzzer-sys = "0.4"
taskit-types = { path = "../crates/taskit-types" }
taskit-init = { path = "../crates/taskit-init" }
toml = "0.8"
serde_json = "1"
