[package]
name = "taskit-crux"
version = "0.7.0"
edition.workspace = true
license.workspace = true
description = "Embedded Cruxfile runner for taskit (behind feature flag)"

[dependencies]
taskit-core.workspace = true
taskit-types.workspace = true

[dev-dependencies]
taskit-core.workspace = true
taskit-testing.workspace = true
