[package]
name = "taskit-engine"
version = "0.6.0"
edition.workspace = true
license.workspace = true
description = "CI pipeline engine for taskit"

[dependencies]
taskit-core.workspace = true
taskit-types.workspace = true
anyhow.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
xshell.workspace = true
hex = "0.4"
indicatif = "0.17"
miette = { version = "7", features = ["fancy"] }
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
proptest = "1"
tempfile = "3"
