[package]
name = "taskit-init"
version = "0.4.0"
edition.workspace = true
license.workspace = true
description = "Config and Cruxfile generator for taskit"

[dependencies]
taskit-core = { path = "../taskit-core" }
anyhow = "1"
cargo_metadata = "0.19"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
