[package]
name = "taskit-init"
version = "0.6.0"
edition.workspace = true
license.workspace = true
description = "Config and Cruxfile generator for taskit"

[dependencies]
taskit-core.workspace = true
taskit-types.workspace = true
anyhow.workspace = true
cargo_metadata.workspace = true
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
toml = "0.8"
