[package]
name = "taskit-init"
version = "0.7.0"
edition.workspace = true
license.workspace = true
description = "Config and Cruxfile generator for taskit"

[dependencies]
taskit-types.workspace = true
cargo_metadata.workspace = true
dialoguer = "0.11"

[dev-dependencies]
taskit-macros.workspace = true
taskit-testing.workspace = true
tempfile = "3"
toml = "0.8"
