[package]
name = "taskit-macros"
version = "0.7.0"
edition.workspace = true
license.workspace = true
description = "Proc macros for taskit: #[taskit_test], #[derive(ConfigDefaults)]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
taskit-testing.workspace = true
taskit-types.workspace = true
tempfile = "3"
