[package]
name = "taskit-types"
version = "0.6.0"
edition.workspace = true
license.workspace = true
description = "Shared types and error definitions for taskit"

[dependencies]
anyhow.workspace = true
clap.workspace = true
miette = { version = "7", features = ["derive"] }
serde.workspace = true
thiserror = "2"

[dev-dependencies]
toml = "0.8"
