[package]
name = "taskit-types"
version = "0.7.0"
edition.workspace = true
license.workspace = true
description = "Shared types and error definitions for taskit"

[dependencies]
clap.workspace = true
miette = { version = "7", features = ["derive"] }
serde.workspace = true
thiserror = "2"

[dev-dependencies]
proptest = "1"
toml = "0.8"
